--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <h1>テスト</h1>
   <h1>テスト</h1>
 
-  <h2>テスト２ ブランチA</h2>
-  <h2>テスト２ ブランチA</h2>
-  <h2>テスト２ ブランチA</h2>
-  <h2>テスト２ ブランチA</h2>
+  <h2>ブランチAの変更</h2>
+  <h2>ブランチAの変更</h2>
+  <h2>ブランチAの変更</h2>
+  <h2>ブランチAの変更</h2>
 
   <h3>テスト3</h3>
   <h3>テスト3</h3>
